index.js - UL, side.js - navBar, need fix with document.title instead of invisible divs

--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ h2{
 }
 
 .navBar{
-    width:auto;
+    width:100vw;
     height:auto;
-    margin:20px;
+    margin:0;
 
 
     left:0;
@@ -51,6 +51,11 @@ h2{
     display:flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.navBar .myButton{
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .myButton{
